manifests/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: apps
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
