manifests/apps/homepage/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - homepage.cluster.nelsondane.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
